NOISSUE - Make Cache Key Duration Configurable (#1815)
* Make Cache Key Duration Configurable

Signed-off-by: rodneyosodo <blackd0t@protonmail.com>

* Rename ENV Var

Signed-off-by: rodneyosodo <blackd0t@protonmail.com>

---------

Signed-off-by: rodneyosodo <blackd0t@protonmail.com>
Signed-off-by: dusanb94 <dusan.borovcanin@mainflux.com>

--- a/docker/.env
+++ b/docker/.env
@@ -89,6 +89,7 @@ MF_THINGS_ES_DB=0
 MF_THINGS_URL=http://mainflux-things:9000
 MF_THINGS_STANDALONE_ID=
 MF_THINGS_STANDALONE_TOKEN=
+MF_THINGS_AUTH_CACHE_DURATION=10m
 
 ### HTTP
 MF_HTTP_ADAPTER_PORT=8008
